--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<input type="text" [(ngModel)]="name">
-<p>{{ name }}</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>App Component</h3>
+      <hr>
+      <app-alerts></app-alerts>
+    </div>
+  </div>
+</div>
+
