--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
       <h3>App Component</h3>
       <hr>
-      <app-alerts></app-alerts>
+      <app-servers></app-servers>
     </div>
   </div>
 </div>
