--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="pageName === 'recipes'"></app-recipes>
-      <app-shopping-list *ngIf="pageName === 'shopping-list'"></app-shopping-list>
+      <!-- <app-recipes *ngIf="pageName === 'recipes'"></app-recipes>
+      <app-shopping-list *ngIf="pageName === 'shopping-list'"></app-shopping-list> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
