feat: add child routs for recipes

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,12 +3,6 @@
     <app-recipes-list></app-recipes-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail
-      *ngIf="recipeDetail; else infoText"
-      [recipe]="recipeDetail"
-      ></app-recipe-detail>
-    <ng-template #infoText>
-      <p>Please Select a Recipe</p>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
